cambios al sitio web

--- a/tatiana.html
+++ b/tatiana.html
@@ -57,7 +57,7 @@
                 <p>Ser reconocida a nivel nacional en cada hogar y de la misma manera ofrecer servicios de un alto nivel de calidad desde nuestros colaboradores a nuestros clientes.</p> 
                 </div> 
                 <div class="image2">
-                <img src="/img_tatiana/fotoa1.jpg" alt="">
+                <img src="/img_tatiana/facebook.png" alt="">
                 </div>
             
             </div> 
@@ -74,7 +74,7 @@
                     </figure>
             <div class="contenido-card">
                 <h3>Televisores</h3>
-                <p>Podras encontrar las mejores marcas y calidad en nuestros Televisores.</p>
+                <p>Podras encontrar las mejores marcas y calidad en nuestros Televisores :).</p>
                 <a href="Televisores.html">Mas Informacion</a>
             </div>
         </div>
